--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,40 @@
 
   <body>
     <header>
-      <%= link_to("GitHubApp", "/") %>
+
+      <% if @current_user %>
+          <%= link_to("TweetApp", "/users/index") %>
+        <% else %>
+          <%= link_to("TweetApp", "/") %>
+        <% end %>
       <ul>
-        <li>
-          <%= link_to("ユーザー一覧", "/users/index") %>
-        </li>
-        <li>
-          <%= link_to("新規登録", "/signup") %>
-        </li>
+        <% if @current_user %>
+        
+          <li>
+            
+            <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+          </li>
+          
+          <li>
+            <%= link_to("ユーザー一覧", "/users/index") %>
+          </li>
+          <li>
+            <%= link_to("ログアウト", "/logout", {method: :post}) %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to("GitHubAppとは", "/about") %>
+          </li>
+          <li>
+            <%= link_to("新規登録", "/signup") %>
+          </li>
+          <li>
+            <%= link_to("ログイン", "/login") %>
+          </li>
+        <% end %>
       </ul>
     </header>
-    
+
     <% if flash[:notice] %>
       <%= flash[:notice] %>
     <% end %>
