--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1>Users#show</h1>
-<p><%= @user.name%></p>
-<%= link_to("編集", "/users/#{@user.id}/edit") %>
+<h2><%= @user.name%></h2>
+<p><% @user.email %></p>
+<% if @user.id == @current_user.id %>
+    <%= link_to("編集", "/users/#{@user.id}/edit") %>
+<% end %>
