--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,48 +7,54 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+    <![endif]-->
   </head>
 
   <body>
-    <header>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
 
-      <% if @current_user %>
-          <%= link_to("TweetApp", "/users/index") %>
-        <% else %>
-          <%= link_to("TweetApp", "/") %>
-        <% end %>
-      <ul>
         <% if @current_user %>
-        
-          <li>
-            
-            <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
-          </li>
-          
-          <li>
-            <%= link_to("ユーザー一覧", "/users/index") %>
-          </li>
-          <li>
-            <%= link_to("ログアウト", "/logout", {method: :post}) %>
-          </li>
+            <%= link_to("TweetApp", "/users/index") %>
         <% else %>
-          <li>
-            <%= link_to("GitHubAppとは", "/about") %>
-          </li>
-          <li>
-            <%= link_to("新規登録", "/signup") %>
-          </li>
-          <li>
-            <%= link_to("ログイン", "/login") %>
-          </li>
+            <%= link_to("TweetApp", "/") %>
         <% end %>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <% if @current_user %>
+          
+            <li>    
+              <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
+            </li>
+            
+            <li>
+              <%= link_to("ユーザー一覧", "/users/index") %>
+            </li>
+            <li>
+              <%= link_to("ログアウト", "/logout", {method: :post}) %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to("GitHubAppとは", "/about") %>
+            </li>
+            <li>
+              <%= link_to("新規登録", "/signup") %>
+            </li>
+            <li>
+              <%= link_to("ログイン", "/login") %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </header>
 
     <% if flash[:notice] %>
       <%= flash[:notice] %>
     <% end %>
-
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
