--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
       <div class="container">
 
         <% if @current_user %>
-            <%= link_to("TweetApp", "/users/index") %>
+            <%= link_to("GitHubApp", "/users/index") %>
         <% else %>
-            <%= link_to("TweetApp", "/") %>
+            <%= link_to("GitHubApp", "/") %>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
           <% if @current_user %>
