--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://myCDN.com/prism@v1.x/themes/prism.css" rel="stylesheet" />
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
@@ -23,8 +24,11 @@
             <%= link_to("GitHubApp", "/") %>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to("クイズ", "/quiz") %>
+          </li>
+
           <% if @current_user %>
-          
             <li>    
               <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
             </li>
@@ -56,5 +60,8 @@
     <div class="container">
       <%= yield %>
     </div>
+    <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
+    <script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
+</body>
   </body>
 </html>
