judge action added

--- a/app/views/home/quiz.html.erb
+++ b/app/views/home/quiz.html.erb
@@ -8,3 +8,10 @@
         </code>
     </pre>
 </p>
+<h2>
+    <%= form_tag("/judge") do %>
+        <p>回答：</p>
+        <input name="answer">
+        <input type="submit" value="送信">
+    <% end %>
+</h2>
