--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -43,9 +43,28 @@ h2 {
     text-align: center;
     font-weight: normal;
     color: #777;
-  }
-  
-  p {
+}
+
+p {
     font-size: 1.1em;
     line-height: 1.7em;
-  }
+}
+
+/* container */
+.container {
+    padding-top: 24px;
+}
+
+/* flash */
+.flash {
+    padding: 10px 0;
+    color: white;
+    background: rgb(251, 170, 88);
+    text-align: center;
+    position: absolute;
+    top: 64px;
+    z-index: 10;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+    font-size: 14px;
+}
