--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -59,7 +59,7 @@ p {
 .flash {
     padding: 10px 0;
     color: white;
-    background: rgb(251, 170, 88);
+    background: #306AA7;
     text-align: center;
     position: absolute;
     top: 64px;
