--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="https://myCDN.com/prism@v1.x/themes/prism.css" rel="stylesheet" />
+    <link href="/prism.css" rel="stylesheet" />
+    <%= javascript_include_tag 'prism' %>
+    <%= stylesheet_link_tag 'prism'%>
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
@@ -62,8 +64,6 @@
     <div class="container">
       <%= yield %>
     </div>
-    <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
-    <script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
 </body>
   </body>
 </html>
