--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             </li>
             
             <li>
-              <%= link_to("ユーザー一覧", "/users/index") %>
+              <%= link_to("ランキング", "/users/index") %>
             </li>
             <li>
               <%= link_to("ログアウト", "/logout", {method: :post}) %>
