--- a/app/views/home/quiz.html.erb
+++ b/app/views/home/quiz.html.erb
@@ -2,7 +2,7 @@
 <h2>このコードは何の言語で書かれているでしょうか?</h2>
 <p>
     <pre>
-        <code class="<%= @langClass %>"><%= @code %></code>
+        <code class="<%= @lang_class %>"><%= @code %></code>
     </pre>
 </p>
 <h2>
