add favorite lang to users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -67,3 +67,12 @@ p {
     border-radius: 0 0 2px 2px;
     font-size: 14px;
 }
+
+/* table */
+table {
+    font-size: 1.2em;
+    letter-spacing: -1px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-weight: normal;
+}
