--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <h1>ユーザー詳細</h1>
 <h2><%= @user.name%></h2>
-<p>email:<%= @user.email %></p>
-<p>score:<%= @user.score %></p>
+<h3>email:<%= @user.email %></h3>
+<h3>score:<%= @user.score %></h3>
+<h3>favorite language: <%= @user.favorite_lang %></h3>
 <% if @user.id == @current_user.id %>
     <%= link_to("編集", "/users/#{@user.id}/edit") %>
 <% end %>
