--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h2><%= @user.name%></h2>
 <h3>email:<%= @user.email %></h3>
 <h3>score:<%= @user.score %></h3>
-<h3>favorite language: <%= @user.favorite_lang %></h3>
+<h3>好きなプログラミング言語: <%= @user.favorite_lang %></h3>
 <% if @user.id == @current_user.id %>
     <%= link_to("編集", "/users/#{@user.id}/edit") %>
 <% end %>
