--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,51 +8,11 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'prism'%>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
+    <%= render 'layouts/shim' %>
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-
-        <% if @current_user %>
-            <%= link_to("GitHubApp", "/users/index") %>
-        <% else %>
-            <%= link_to("GitHubApp", "/") %>
-        <% end %>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <%= link_to("クイズ", "/quiz") %>
-          </li>
-
-          <% if @current_user %>
-            <li>    
-              <%= link_to(@current_user.name, "/users/#{@current_user.id}") %>
-            </li>
-            
-            <li>
-              <%= link_to("ランキング", "/users/index") %>
-            </li>
-            <li>
-              <%= link_to("ログアウト", "/logout", {method: :post}) %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to("GitHubAppとは", "/about") %>
-            </li>
-            <li>
-              <%= link_to("新規登録", "/signup") %>
-            </li>
-            <li>
-              <%= link_to("ログイン", "/login") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </header>
+    <%= render 'layouts/header' %>
       <% if flash[:notice] %>
         <div class="flash">
           <%= flash[:notice] %>
