lang error fixed

--- a/app/views/home/fortune_telling.html.erb
+++ b/app/views/home/fortune_telling.html.erb
@@ -2,7 +2,7 @@
 
 <h1>今日の運勢</h1>
 <h2>あなたの今日の運勢を占うのはこのソースコード</h2>
-<h3><%= link_to("Link", @html_url) %></h3>
+<h3><%= link_to("GitHubでみる", @html_url) %></h3>
 <p>
     <pre>
         <code class="<%= @lang_class %>"><%= @code %></code>
