accuracy rate added

--- a/app/views/home/quiz.html.erb
+++ b/app/views/home/quiz.html.erb
@@ -2,6 +2,7 @@
 
 <h1>クイズ</h1>
 <h2>このコードは何の言語で書かれているでしょうか?</h2>
+<h2>正答率<%= @accuracy_rate %>%</h2>
 <p>
     <pre>
         <code class="<%= @lang_class %>"><%= @code %></code>
