interpersonal_luck and work_luck added

--- a/app/views/home/fortune_telling.html.erb
+++ b/app/views/home/fortune_telling.html.erb
@@ -4,6 +4,9 @@
 
 <h3><%= link_to("GitHubでみる", @html_url) %></h3>
 <p><%= @filename %>な一日</p>
+<p>仕事運: <%= @work_luck %></p>
+<p>対人運：<%= @interpersonal_luck %></p>
+
 <p>
     <pre>
         <code id="code" class="language-javascript"><%= @code %></code>
