twitter login added

--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -10,3 +10,5 @@
         <input name="password" type="password" value="<%= @password %>">
         <input type="submit" value="ログイン">
     <% end %>
+
+<%= link_to 'Twitterでログイン', 'auth/twitter' %>
