--- a/app/views/home/fortune_telling.html.erb
+++ b/app/views/home/fortune_telling.html.erb
@@ -2,8 +2,8 @@
 <h1>今日の運勢</h1>
 <h2>あなたの今日の運勢を占うのはこのソースコード</h2>
 
-<h3><%= link_to("GitHubでみる", @html_url) %></h3>
-<p><%= @filename %>な一日</p>
+<h3><%= link_to("GitHubでみる", @link) %></h3>
+<h3><%= @filename %>な一日</h3>
 <p>仕事運: <%= @work_luck %></p>
 <p>対人運：<%= @interpersonal_luck %></p>
 
