tweet button added

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,6 +23,14 @@ textarea {
     margin-bottom: 10px;
 }
 
+.btn {
+    font-size: 3em;
+    margin-bottom: 30px;
+    letter-spacing: -2px;
+    text-align: center;
+    margin: 0px auto;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
