--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome to the GitHub App</h1>
+<h1>GitHub App</h1>
+
+<%= link_to "クイズ", '/quiz', class: "btn btn-lg btn-primary" %>
+<%= link_to "占う", '/fortune_telling', class: "btn btn-lg btn-primary" %>
