--- a/app/views/home/fortune_telling.html.erb
+++ b/app/views/home/fortune_telling.html.erb
@@ -7,6 +7,9 @@
 <p>仕事運: <%= @work_luck %></p>
 <p>対人運：<%= @interpersonal_luck %></p>
 
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="今日のコード占い：仕事運<%= @work_luck %>対人運<%= @interpersonal_luck %>" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 <p>
     <pre>
         <code id="code" class="language-javascript"><%= @code %></code>
