--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,6 @@
-<h1>GitHub App</h1>
 
-<%= link_to "クイズ", '/quiz', class: "btn btn-lg btn-primary" %>
-<%= link_to "占う", '/fortune_telling', class: "btn btn-lg btn-primary" %>
+<div class="center jumbotron">
+    <h1>GitHub App</h1>
+    <%= link_to "クイズ", '/quiz', class: "btn btn-lg btn-primary" %>
+    <%= link_to "占う", '/fortune_telling', class: "btn btn-lg btn-primary" %>
+</div>
