--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -4,8 +4,8 @@
         <%= @error_message %>
     <% end %>
     <%= form_tag("/login") do%>
-        <p>メールアドレス</p>
-        <input name="email" value="<%= @email %>">
+        <p>ユーザー名</p>
+        <input name="name" value="<% @name %>">
         <p>パスワード</p>
         <input name="password" type="password" value="<%= @password %>">
         <input type="submit" value="ログイン">
