--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,7 +23,7 @@ textarea {
     margin-bottom: 10px;
 }
 
-.btn {
+.top-btn {
     font-size: 3em;
     margin-bottom: 30px;
     letter-spacing: -2px;
