--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<h1>ランキング</h1>
-
+<div class="jumbotron">
+    <h1>ランキング</h1>
     <table border="1" align="center">
         <tr>
             <th>Rank</th>
@@ -14,4 +14,5 @@
             </tr>
         <% end %>
     </table>
+</div>
 
