--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
     <h1>GitHubAppとは...</h1>
     <h3>GitHubのコードをクイズや占いを通じて読解するアプリです！<br>占いでは，ランダムに表示されるソースコードからあなたの1日の運勢を占います！<br>クイズでは，ランダムに表示されるソースコードがどの言語で記述されているかを当てる問題が出題されます！ユーザー登録をすると総合得点のランキングが利用できます！</h3>
-    <h2>作者：<a href="https://twitter.com/hir0ki_0ka">Hiroki Oka</a></h2>
+    <h2>作者：<a href="https://github.com/HirokiOka">Hiroki Oka</a></h2>
 </div>
